Add distance from issue to tokens
The idea is to use it as a weight

Squashed commit of the following:

commit c3d21f55d93000612c17f5427fc4862ac20f2e8e
Author: Victor Schneuwly <victor.schneuwly@sonarsource.com>
Date:   Tue Aug 12 16:09:01 2025 +0200

    Add token distance to IssueTokenDto and persist it in the database

commit 3d6a7d3b948d85e796d0ff2ed10881d7e266cf99
Author: Victor Schneuwly <victor.schneuwly@sonarsource.com>
Date:   Tue Aug 12 16:07:34 2025 +0200

    Add token distance to issue cache

    This is done with protobuf

commit 09426a0d43de8cd668d7c12508930ab1dba8af99
Author: Victor Schneuwly <victor.schneuwly@sonarsource.com>
Date:   Tue Aug 12 16:09:23 2025 +0200

    Use newly created class for issue snippets and issue tokens

    Also add the distance to issue for the tokens.